# math-cpp

./: .clang-format  .gitattributes  .gitignore  .latexindent.yaml  Cargo.toml  Makefile  all.tex
.github/: profiles.mk
_/: algorithm_design.tex  calculus.tex  complex_analysis.tex  errors.tex  functions.tex  linear_algebra.tex  nonlinear_optimization_constrained.tex  nonlinear_optimization_unconstrained.tex  ordinary_differential_equations.tex  plenary.tex  polynomials.tex  statistics_examples.tex
core/: counting.tex  real_analysis.tex  set_theory.tex
core/linear_algebra/: bases.tex  change_of_basis.tex  duality_dual_space_and_dual_map.tex  eigenvalues_and_eigenvectors.tex  inner_product_spaces.tex  invertibility_and_isomorphisms.tex  isomorphic_vector_spaces.tex  kernel_and_range.tex  linear_map_as_a_matrix.tex  linear_maps.tex  linear_maps_and_matrix_multiplication.tex  matrix_multiplication.tex  mod.tex  operators_on_inner_product_spaces.tex  orthogonal_bases.tex  orthogonal_compl_and_min_problems.tex  polynomials.tex  products_of_vector_spaces.tex  span_and_linear_independence.tex  vector_spaces.tex
core/topology/: basis_for_a_topology.tex  closed_sets.tex  mod.tex  the_order_topology.tex  the_product_topology.tex  the_subspace_topology.tex
defs/: calculus.tex  counting.tex  linear_algebra.tex  optimization.tex  real_analysis.tex  topology.tex
lib/real_analysis/: mod.tex  (+12 more)
src/: CMakeLists.txt  consts.cc  fs.cc  fs.h  label.cc  label.h  lines.h  main.cc  main.rs  mark.h  prelude.h  project.cc  project.h  string.cc  string.h  test.cc  tex.cc  tex.h  tuples.h
(+50 files in other folders)
